Project/styles/base.css
:root {
    --color-primary: #7F5539;
    --color-secondary: #A68A64;
    --color-contrast: #656D4A;
    --color-background: #FAF8F4;
    --color-text: #414833;
}

* {
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    color: var(--color-text);
    font-weight: bolder;
    margin: 0;
    padding: 0;
}

header {
    display: grid;
    background-color: var(--color-background);
    grid-template-columns: 50px auto 60px;
    gap: 20px;
    font-weight: bold;
    min-height: 90px;
    align-items: center;
}

header img {
    display: block;
    border-radius: 55px;
    width: 50px;
    height: auto;
    margin: 10px;
}

header span {
    display: flex;
    align-items: center;
    font-size: 2rem;
    text-align: center;
    color: var(--color-text);
    font-family: 'Merriweather', serif;
}

h1 {
    display: block;
    width: max-content;
    margin: 1rem auto;
    font-family: 'Merriweather', serif;
    background-color: var(--color-primary);
    font-size: 2rem;
    color: #ffffff;
    border-radius: 33px;
    padding: .2rem 1rem;
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
}

.home-page {
    text-align: center;
}

h2,
h3,
h4,
h5,
h6 {
    font-family: 'Merriweather', serif;
    font-size: 2rem;
}

.navigation {
    max-height: 0;
    overflow: hidden;
    opacity: 0;
    transform: translateY(-10px);
    transition: max-height 0.5s ease, opacity 0.3s ease, transform 0.5s ease;
}

.navigation.show {
    max-height: 500px;
    opacity: 1;
    transform: translateY(0);
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    font-weight: bold;
    font-size: 1.3rem;
}

nav ul li {
    flex: 1;
}

nav a {
    display: block;
    background-color: var(--color-background);
    color: var(--color-text);
    text-align: center;
    padding: 1rem;
    text-decoration: none;
    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease, border-radius 0.3s ease;
}

nav a:hover {
    color: #ffffff;
    background-color: var(--color-secondary);
}

.navigation li.current a {
    box-shadow: inset 0 -5px 0 var(--color-secondary);
}

.hamburger {
    background: none;
    border: none;
    cursor: pointer;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    justify-self: center;
    padding-bottom: 0;
    margin-bottom: 0;
    width: 41px;
    height: 45px;
    border-radius: 50%;
    position: relative;
    border: none;
    cursor: pointer;
}

.hamburger::before,
.hamburger::after {
    content: "";
    position: absolute;
    left: 5px;
    right: 5px;
    height: 5px;
    background-color: var(--color-primary);
    border-radius: 10px;
    transition: transform 0.3s ease, opacity 0.2s ease;
}

.hamburger::before {
    top: 14px;
}

.hamburger::after {
    bottom: 14px;
}

.hamburger.show::before {
    transform: translateY(6px) rotate(45deg);
}

.hamburger.show::after {
    transform: translateY(-6px) rotate(-45deg);
}

/* FEATURED RECIPE */

.featured-card {
    display: inline-block;
    background-color: var(--color-background);
    color: var(--color-text);
    padding: 0;
    margin: 0 15px;
    border-radius: 22px;
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
    max-height: fit-content;
}

.featured {
    background-color: var(--color-contrast);
    padding: 2px 10px 10px 10px;
    color: #ffffff;
    border-radius: 0px 0px 22px 22px;
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
}

.featured-recipe img {
    width: 100%;
    height: auto;
    display: block;
    border-radius: 22px 22px 0 0;
    object-fit: cover;
}

.featured-recipe h3 {
    text-align: left;
}

.featured-recipe p {
    text-align: left;
}

.recipe-card {
    border-radius: 22px;
    overflow: hidden;
    display: inline-block;
}

/*RECIPE CARD FEATURED*/
.card {
    text-align: left;
}

.card button {
    text-align: left;
    border: none;
    border-radius: 22px;
    background-color: var(--color-primary);
    color: #ffffff;
    padding: 0.5rem 1rem;
    margin: 5px 0 10px 0;
    font-size: 1rem;
    transition: transform 0.3s, background-color 0.3s;
}

.card button:hover {
    transform: scale(1.06);
    background-color: var(--color-secondary);
    cursor: pointer;
}

/*RECIPE CARDS GENERAL*/
.recipe-cards {
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-radius: 15px;
    grid-template-areas:
        "title"
        "image"
        "description"
        "button";
    gap: 10px 15px;
    background-color: var(--color-background);
    border: solid 2px var(--color-secondary);
    padding: 10px;
    max-width: 900px;
    margin: 10px;
    box-sizing: border-box;
    align-items: center;
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
}

.recipe-cards img {
    grid-area: image;
    max-width: 350px;
    border: solid 5px var(--color-contrast);
    border-radius: 22px;
}

.recipe-cards h3 {
    grid-area: title;
    text-align: left;
    margin: 0;
    font-weight: bold;
}

.recipe-cards p {
    grid-area: description;
    margin: 0;
    font-size: 1rem;
    text-align: left;
    color: var(--color-text);
}

.recipe-cards button {
    grid-area: button;
    justify-self: start;
    border: none;
    border-radius: 22px;
    background-color: var(--color-primary);
    color: #ffffff;
    padding: 0.5rem 1rem;
    font-size: 1rem;
    transition: transform 0.3s, background-color 0.3s;
    cursor: pointer;
}

.recipe-cards button:hover {
  transform: scale(1.06);
  background-color: var(--color-secondary);
}

.general-recipes {
    margin: 15px;
}

.main-section {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

/*WEATHER*/
.weather-cards {
    background-color: var(--color-background);
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
    padding: 10px;
    margin: 20px;
    border-radius: 22px;
    gap: 50px;
    max-height: 280px;
    display: flex;
}

/*EVENTS*/
.events {
    background-color: var(--color-background);
    margin: 20px;
    padding: 10px;
    border-radius: 22px;
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
}

.events p {
    background-color: var(--color-background);
    margin: 20px;
    padding: 10px;
    border-radius: 22px;
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
}

/*RECIPES MODAL*/
#recipesModal {
    background-color: var(--color-secondary);
    border: solid 3px var(--color-background);
    border-radius: 22px;
    color: #ffffff;
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
}

#recipesModal h3 {
    text-align: center;
}

#recipesModal::backdrop {
    background-color: rgba(0, 0, 0, 0.6);
    backdrop-filter: blur(1px); 
}

#recipesModal button#closeModal {
    transition: transform 0.3s ease;
    background: transparent;
    border: none;
    font-size: 1.6rem;
    position: absolute;
    top: 15px;
    right: 20px;
    cursor: pointer;
}

#recipesModal button#closeModal:hover {
    transform: scale(1.1);
}

/*RECIPES PAGE*/
.entire-recipes {
    margin: 15px;
}

.full-recipe-card {
    display: grid;
    grid-template-areas:
        "title"
        "image"
        "ingredients-title"
        "ingredients"
        "steps-title"
        "steps";

    justify-items: center;
    background-color: var(--color-background);
    padding: 10px;
    gap: 6px;
    margin: 10px;
    border-radius: 22px;
    border: 2px solid var(--color-secondary);
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
}

.full-recipe-card img {
    grid-area: image;
    width: 100%;
    max-height: 320px;
    object-fit: cover;
    display: block;
    border: 3px solid var(--color-contrast);
    border-radius: 15px;
}

.full-recipe-card h3 {
    grid-area: title;
    margin: 4px 0;
}

.full-recipe-card h4 {
    margin: 6px 0 2px;
}

.full-recipe-card h4:nth-of-type(1) {
    grid-area: ingredients-title;
}

.full-recipe-card ul:nth-of-type(1) {
    grid-area: ingredients;
}

.full-recipe-card h4:nth-of-type(2) {
    grid-area: steps-title;
}

.full-recipe-card ul:nth-of-type(2) {
    grid-area: steps;
}

.full-recipe-card ul {
    margin: 0;
    padding-left: 18px;
}

.full-recipe-card li {
    margin-bottom: 1px;
    line-height: 1.3;
}

/*ABOUT PAGE*/

.join {
    display: flex;
    justify-content: center;
}

form {
    background-color: var(--color-background);
    padding: 20px;
    width: 100%;
    max-width: 300px;
    border: 2px solid var(--color-secondary);
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
    border-radius: 24px;
    margin: 0 auto;
    max-height: 600px;
}

form label {
    display: block;
    font-size: 1rem;
    padding-top: .1rem;
    width: 100%;
}

form label textarea {
    width: 100%;
    max-width: 250px;
    max-height: 50px;
    margin-top: 5px;
    resize: none;
}

form input[type=text],
form input[type=tel],
form input[type=date],
form input[type=email],
form select {
    display: block;
    margin: .1rem 0 1rem 0;
    padding: .4rem;
    border: 2px solid #999;
    border-radius: 15px;
    border-left-width: 5px;
    border-left-color: #555;
    font-size: 1rem;
    color: #3D405B;
    width: 100%;
    max-width: 250px;
}

form input:required {
    border-left-color: #c40000;
}

form input:focus {
    border-left-color: black;
    outline: none;
}

form input:required:valid {
    border-left-color:  var(--color-contrast);
}

form input[type=submit] {
    display: block;
    margin: 20px auto 10px;
    border: none;
    text-align: center;
    background-color: var(--color-contrast);
    color: white;
    border-radius: 32px;
    padding: .6rem 1.4rem;
    font-size: 1.5rem;
    appearance: none;
    transition: background-color 0.3s, color 0.3s, transform 0.3s;
    cursor: pointer;
}


form input[type=submit]:active {
    transform: scale(0.9);
    background-color: var(--color-secondary);
    transition: none;
}

.about-content {
    max-width: 700px;
    text-align: center;
    background-color: var(--color-background);
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
    margin: 15px auto;
    padding: 10px;
    border-radius: 22px;
}

.about-content p {
    text-align: left;
}

.about-content img {
    max-width: 100%;
    border-radius: 22px;
}

#about-page {
    margin: 15px;
}


/*THANKYOU PAGE*/
.thankyou-page {
    text-align: center;
    background-color: var(--color-background);
    box-shadow: 0 6px 18px rgba(127, 85, 57, 0.2);
    margin: 15px;
    border-radius: 22px;
    padding: 10px;
    border: 1px solid var(--color-secondary);
}

/* FOOTER */
footer {
    background-color: var(--color-background);
    border-radius: 22px;
    padding: 1rem 10px;
    text-align: center;
    margin: 10px;
}

.social {
    display: flex;
    justify-content: center;
    column-gap: 8px;
}

.social a {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 44px;
    height: 44px;
    border-radius: 32px;
    transition: transform 0.3s ease-out;
}

.social img {
    width: 32px;
    height: 32px;
}

.social a:hover {
    transform: scale(1.1);
}

